src/tests/snapshots/all__github_secret_scanning__github_secret_alert_for_unknown_token.snap
---
source: src/tests/github_secret_scanning.rs
expression: response.into_json()
---
[
  {
    "label": "false_positive",
    "token_raw": "some_token",
    "token_type": "some_type"
  }
]
